--- a/折800/css/style.css
+++ b/折800/css/style.css
@@ -701,3 +701,79 @@ nav .hot{
 
 
 
+
+
+
+
+/*close 红包弹出框 点击关闭样式*/
+#ad div{
+    padding: 100px 0 0 0;
+}
+#ad span{
+    color: #fff;
+    background: #ff4244;
+    border-radius: 5px;
+    padding: 8px 100px;
+}
+#ad #close{
+    display: none;
+}
+#ad .div2{
+    width: 80%;
+    text-align: center;
+    margin: auto;
+    margin-top: -50px;
+}
+#ad{
+    padding-top: 100px;
+    opacity: 1;
+    transform: none;
+    background: rgba(0,0,0,.5);
+    position: fixed;
+    z-index: 10001;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+#ad .div1,#ad .div3,#ad .div4{
+    text-align: center;
+    margin-top: -60px;
+}
+#ad .div3{
+    position: relative;
+    top: 85px;
+}
+#ad .div4{
+    position: relative;
+    top: -345px;
+}
+#ad .x{
+    position: fixed;
+    right: 50px;
+    top: 135px;
+    font-size: 20px;
+    background: #a1a1a0;
+    border-radius: 50%;
+    padding: 1px 8px;
+    z-index: 20;
+}
+
+
+
+#ad .div3{
+    animation: aa 2s linear 0s forwards;
+    animation-fill-mode: forwards;
+    transform-origin: 100px 100px;
+}
+@keyframes aa{
+    0%{
+        transform: rotateX(0deg);
+    }
+    100%{
+        transform: rotateX(180deg);
+    }
+}
+
+
+
